--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,8 +40,8 @@ font-family: 'Poppins', sans-serif;
 body{
 	font-family: 'Poppins', sans-serif;
 	font-size:16px;
-	color:  #1520A6;
-	background:  #1520A6;
+	/* color:  #1520A6; 
+	background:  #1520A6; */
     max-width:1920px;
     margin:0 auto;
 	overflow-x:hidden;
@@ -149,7 +149,7 @@ nav.navbar.bootsnav ul.nav > li.dropdown span {
     margin-left: 15px;
 }
 .sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a {color:#6a708e;}
-.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a:hover,.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a:focus,.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li.active>a{color: #1520A6;} /* #d92cf9 */
+.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a:hover,.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a:focus,.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li.active>a{color: #d92cf9;} /* #1520A6*/
 /*.nav li*/
 
 
@@ -425,8 +425,8 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 .tooltip > .tooltip-inner {
    background-color: transparent;
    padding: 1px 5px;
-   color: #1520A6;
-	/* color: #b636ff  */
+   /* color: #1520A6; */
+	color: #b636ff;
    font-weight: 500;
    font-size: 12px;
    border-radius: 0;
@@ -866,5 +866,6 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 
 /*========================Thank you=================
+
 
 
