--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,8 +193,8 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     align-items: center;
     justify-content: center;
     position:relative;
-	background:url(../images/about/bg_v2.jpg)no-repeat;
-/*	background:url(../images/about/bg_v1.jpg)no-repeat;
+	background:url(../images/about/bg_v2.png)no-repeat;
+/*	background:url(../images/about/bg_v2.png)no-repeat;
     background:url(../images/about/bg.jpg)no-repeat; */
     background-size:cover;
     background-position: center;
@@ -875,6 +875,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 
 /*========================Thank you=================
+
 
 
 
